plc4net/tools/code-gen/src/generated/MSpecParser.cs
//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from code-generation/protocol-base-mspec/src/main/antlr4/org/apache/plc4x/plugins/codegenerator/language/mspec/MSpec.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace org.apache.plc4net.tools.codegen.grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MSpecParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		TICK=25, LBRACKET=26, RBRACKET=27, LRBRACKET=28, RRBRACKET=29, LCBRACKET=30, 
		RCBRACKET=31, ASTERISK=32, CONSTANTS=33, GLOBALS=34, CONTEXT=35, TYPE=36, 
		DISCRIMINATEDTYPE=37, DATAIO=38, ENUM=39, BATCHSET=40, ABSTRACT=41, ARRAY=42, 
		ASSERT=43, CHECKSUM=44, CONST=45, DISCRIMINATOR=46, IMPLICIT=47, MANUALARRAY=48, 
		MANUAL=49, OPTIONAL=50, PADDING=51, PEEK=52, RESERVED=53, SIMPLE=54, STATE=55, 
		TYPESWITCH=56, UNKNOWN=57, VALIDATION=58, VIRTUAL=59, BIT=60, BYTE=61, 
		INT=62, VINT=63, UINT=64, VUINT=65, FLOAT=66, UFLOAT=67, STRING=68, VSTRING=69, 
		TIME=70, DATE=71, DATETIME=72, SHOULD_FAIL=73, ARRAY_LOOP_TYPE=74, INTEGER_LITERAL=75, 
		FLOAT_LITERAL=76, HEX_LITERAL=77, BOOLEAN_LITERAL=78, STRING_LITERAL=79, 
		IDENTIFIER_LITERAL=80, LINE_COMMENT=81, BLOCK_COMMENT=82, EmptyLine=83, 
		NEWLINE=84, WS=85;
	public const int
		RULE_file = 0, RULE_contantsDefinition = 1, RULE_globalsDefinition = 2, 
		RULE_contextDefintion = 3, RULE_complexTypeDefinition = 4, RULE_complexType = 5, 
		RULE_fieldDefinition = 6, RULE_batchSetDefinition = 7, RULE_dataIoDefinition = 8, 
		RULE_field = 9, RULE_abstractField = 10, RULE_arrayField = 11, RULE_assertField = 12, 
		RULE_checksumField = 13, RULE_constField = 14, RULE_discriminatorField = 15, 
		RULE_enumField = 16, RULE_implicitField = 17, RULE_manualArrayField = 18, 
		RULE_manualField = 19, RULE_optionalField = 20, RULE_paddingField = 21, 
		RULE_peekField = 22, RULE_reservedField = 23, RULE_simpleField = 24, RULE_stateField = 25, 
		RULE_typeSwitchField = 26, RULE_unknownField = 27, RULE_validationField = 28, 
		RULE_virtualField = 29, RULE_enumValueDefinition = 30, RULE_typeReference = 31, 
		RULE_caseStatement = 32, RULE_dataType = 33, RULE_attribute = 34, RULE_attributeList = 35, 
		RULE_argument = 36, RULE_argumentList = 37, RULE_expression = 38, RULE_multipleExpressions = 39, 
		RULE_multipleVariableLiterals = 40, RULE_variableLiteral = 41, RULE_innerExpression = 42, 
		RULE_valueLiteral = 43, RULE_idExpression = 44, RULE_binaryOperator = 45;
	public static readonly string[] ruleNames = {
		"file", "contantsDefinition", "globalsDefinition", "contextDefintion", 
		"complexTypeDefinition", "complexType", "fieldDefinition", "batchSetDefinition", 
		"dataIoDefinition", "field", "abstractField", "arrayField", "assertField", 
		"checksumField", "constField", "discriminatorField", "enumField", "implicitField", 
		"manualArrayField", "manualField", "optionalField", "paddingField", "peekField", 
		"reservedField", "simpleField", "stateField", "typeSwitchField", "unknownField", 
		"validationField", "virtualField", "enumValueDefinition", "typeReference", 
		"caseStatement", "dataType", "attribute", "attributeList", "argument", 
		"argumentList", "expression", "multipleExpressions", "multipleVariableLiterals", 
		"variableLiteral", "innerExpression", "valueLiteral", "idExpression", 
		"binaryOperator"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "','", "'.'", "'?'", "':'", "'\"'", "'!'", "'+'", "'-'", 
		"'/'", "'^'", "'=='", "'!='", "'>>'", "'<<'", "'>'", "'<'", "'>='", "'<='", 
		"'&&'", "'||'", "'&'", "'|'", "'%'", "'''", "'['", "']'", "'('", "')'", 
		"'{'", "'}'", "'*'", "'constants'", "'globals'", "'context'", "'type'", 
		"'discriminatedType'", "'dataIo'", "'enum'", "'batchSet'", "'abstract'", 
		"'array'", "'assert'", "'checksum'", "'const'", "'discriminator'", "'implicit'", 
		"'manualArray'", "'manual'", "'optional'", "'padding'", "'peek'", "'reserved'", 
		"'simple'", "'state'", "'typeSwitch'", "'unknown'", "'validation'", "'virtual'", 
		"'bit'", "'byte'", "'int'", "'vint'", "'uint'", "'vuint'", "'float'", 
		"'ufloat'", "'string'", "'vstring'", "'time'", "'date'", "'dateTime'", 
		"'shouldFail'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "TICK", "LBRACKET", "RBRACKET", "LRBRACKET", "RRBRACKET", "LCBRACKET", 
		"RCBRACKET", "ASTERISK", "CONSTANTS", "GLOBALS", "CONTEXT", "TYPE", "DISCRIMINATEDTYPE", 
		"DATAIO", "ENUM", "BATCHSET", "ABSTRACT", "ARRAY", "ASSERT", "CHECKSUM", 
		"CONST", "DISCRIMINATOR", "IMPLICIT", "MANUALARRAY", "MANUAL", "OPTIONAL", 
		"PADDING", "PEEK", "RESERVED", "SIMPLE", "STATE", "TYPESWITCH", "UNKNOWN", 
		"VALIDATION", "VIRTUAL", "BIT", "BYTE", "INT", "VINT", "UINT", "VUINT", 
		"FLOAT", "UFLOAT", "STRING", "VSTRING", "TIME", "DATE", "DATETIME", "SHOULD_FAIL", 
		"ARRAY_LOOP_TYPE", "INTEGER_LITERAL", "FLOAT_LITERAL", "HEX_LITERAL", 
		"BOOLEAN_LITERAL", "STRING_LITERAL", "IDENTIFIER_LITERAL", "LINE_COMMENT", 
		"BLOCK_COMMENT", "EmptyLine", "NEWLINE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MSpec.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MSpecParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MSpecParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MSpecParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MSpecParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContantsDefinitionContext contantsDefinition() {
			return GetRuleContext<ContantsDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalsDefinitionContext globalsDefinition() {
			return GetRuleContext<GlobalsDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContextDefintionContext contextDefintion() {
			return GetRuleContext<ContextDefintionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComplexTypeDefinitionContext[] complexTypeDefinition() {
			return GetRuleContexts<ComplexTypeDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComplexTypeDefinitionContext complexTypeDefinition(int i) {
			return GetRuleContext<ComplexTypeDefinitionContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 92;
				contantsDefinition();
				}
				break;
			}
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 95;
				globalsDefinition();
				}
				break;
			}
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 98;
				contextDefintion();
				}
				break;
			}
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LBRACKET) {
				{
				{
				State = 101;
				complexTypeDefinition();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 107;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContantsDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LBRACKET() { return GetTokens(MSpecParser.LBRACKET); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET(int i) {
			return GetToken(MSpecParser.LBRACKET, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONSTANTS() { return GetToken(MSpecParser.CONSTANTS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RBRACKET() { return GetTokens(MSpecParser.RBRACKET); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET(int i) {
			return GetToken(MSpecParser.RBRACKET, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstFieldContext[] constField() {
			return GetRuleContexts<ConstFieldContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstFieldContext constField(int i) {
			return GetRuleContext<ConstFieldContext>(i);
		}
		public ContantsDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contantsDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.EnterContantsDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.ExitContantsDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ContantsDefinitionContext contantsDefinition() {
		ContantsDefinitionContext _localctx = new ContantsDefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_contantsDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(LBRACKET);
			State = 110;
			Match(CONSTANTS);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LBRACKET) {
				{
				{
				State = 111;
				Match(LBRACKET);
				State = 112;
				constField();
				State = 113;
				Match(RBRACKET);
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 120;
			Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalsDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(MSpecParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GLOBALS() { return GetToken(MSpecParser.GLOBALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(MSpecParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FieldDefinitionContext[] fieldDefinition() {
			return GetRuleContexts<FieldDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FieldDefinitionContext fieldDefinition(int i) {
			return GetRuleContext<FieldDefinitionContext>(i);
		}
		public GlobalsDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalsDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.EnterGlobalsDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.ExitGlobalsDefinition(this);
		}
	}

	[RuleVersion(0)]
	public GlobalsDefinitionContext globalsDefinition() {
		GlobalsDefinitionContext _localctx = new GlobalsDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_globalsDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			Match(LBRACKET);
			State = 123;
			Match(GLOBALS);
			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LBRACKET) {
				{
				{
				State = 124;
				fieldDefinition();
				}
				}
				State = 129;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 130;
			Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContextDefintionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(MSpecParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONTEXT() { return GetToken(MSpecParser.CONTEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(MSpecParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FieldDefinitionContext[] fieldDefinition() {
			return GetRuleContexts<FieldDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FieldDefinitionContext fieldDefinition(int i) {
			return GetRuleContext<FieldDefinitionContext>(i);
		}
		public ContextDefintionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contextDefintion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.EnterContextDefintion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.ExitContextDefintion(this);
		}
	}

	[RuleVersion(0)]
	public ContextDefintionContext contextDefintion() {
		ContextDefintionContext _localctx = new ContextDefintionContext(Context, State);
		EnterRule(_localctx, 6, RULE_contextDefintion);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			Match(LBRACKET);
			State = 133;
			Match(CONTEXT);
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LBRACKET) {
				{
				{
				State = 134;
				fieldDefinition();
				}
				}
				State = 139;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 140;
			Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComplexTypeDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(MSpecParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ComplexTypeContext complexType() {
			return GetRuleContext<ComplexTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(MSpecParser.RBRACKET, 0); }
		public ComplexTypeDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_complexTypeDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.EnterComplexTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMSpecListener typedListener = listener as IMSpecListener;
			if (typedListener != null) typedListener.ExitComplexTypeDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ComplexTypeDefinitionContext complexTypeDefinition() {
		ComplexTypeDefinitionContext _localctx = new ComplexTypeDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_complexTypeDefinition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(LBRACKET);
			State = 143;
			complexType();
			State = 144;
			Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
